dhall/tests/type-errors/unit/ListLiteralEmptyNotType.txt
Type error: Unhandled error: error: wrong type of function argument
 --> <current file>:1:5
  |
1 | [] : List Type
  |      ^^^^ this expects an argument of type: Type
  |           ^^^^ but this has type: Kind
  |
  = note: expected type `Type`
             found type `Kind`
